--- a/html5/touch/index.html
+++ b/html5/touch/index.html
@@ -56,12 +56,12 @@
       <img src="http://alloyteam.github.io/AlloyFinger/asset/test.png" alt="" id="pinchImg">
     </div>
   </div>
-  <script src="http://alloyteam.github.io/AlloyFinger/asset/transform.js"></script>
-  <script src="http://alloyteam.github.io/AlloyFinger/alloy_finger.js"></script>
-  <script src="http://alloyteam.github.io/AlloyFinger/asset/to.js"></script>
+  <script src="https://alloyteam.github.io/AlloyFinger/asset/transform.js"></script>
+  <script src="https://alloyteam.github.io/AlloyFinger/alloy_finger.js"></script>
+  <script src="https://alloyteam.github.io/AlloyFinger/asset/to.js"></script>
   <script>
   const pinchImg = document.getElementById('pinchImg');
-  Transform(pichImg);  //变形这张图片
+  Transform(pinchImg);  //变形这张图片
   let initScale = 1;
   new AlloyFinger(pinchImg, {
     pinch: function(evt) {
